--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "kleckrelay-landing-page",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint --ext src",
-    "lint:fix": "eslint --ext src --fix",
-    "format": "prettier --check src",
-    "format:fix": "prettier --write src",
-    "typecheck": "tsc --noEmit",
-    "check": "yarn typecheck && yarn lint && yarn format"
-  },
-  "dependencies": {
-    "i18next": "^22.4.11",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "^2.1.1",
-    "i18next-localstorage-cache": "^1.1.1",
-    "next": "13.2.3",
-    "next-i18next": "^13.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.14.6",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.35.0",
-    "eslint-config-next": "13.2.3",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-i18next": "^6.0.0-6",
-    "eslint-plugin-ordered-imports": "^0.6.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.7",
-    "typescript": "4.9.5"
-  }
+	"name": "kleckrelay-landing-page",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "eslint --ext .",
+		"lint:fix": "eslint --ext . --fix",
+		"format": "prettier --check .",
+		"format:fix": "prettier --write .",
+		"typecheck": "tsc --noEmit",
+		"check": "yarn typecheck && yarn lint && yarn format"
+	},
+	"dependencies": {
+		"i18next": "^22.4.11",
+		"i18next-browser-languagedetector": "^7.0.1",
+		"i18next-http-backend": "^2.1.1",
+		"i18next-localstorage-cache": "^1.1.1",
+		"next": "13.2.3",
+		"next-i18next": "^13.2.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@types/node": "18.14.6",
+		"@types/react": "18.0.28",
+		"@types/react-dom": "18.0.11",
+		"@typescript-eslint/eslint-plugin": "^5.54.1",
+		"@typescript-eslint/parser": "^5.54.1",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.35.0",
+		"eslint-config-next": "13.2.3",
+		"eslint-config-prettier": "^8.7.0",
+		"eslint-plugin-i18next": "^6.0.0-6",
+		"eslint-plugin-ordered-imports": "^0.6.0",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.4",
+		"tailwindcss": "^3.2.7",
+		"typescript": "4.9.5"
+	}
 }
