--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"next": "13.2.3",
 		"next-i18next": "^13.2.1",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"react-i18next": "^12.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "18.14.6",
