--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"check": "yarn typecheck && yarn lint && yarn format"
 	},
 	"dependencies": {
+		"@next/font": "^13.2.3",
 		"i18next": "^22.4.11",
 		"i18next-browser-languagedetector": "^7.0.1",
 		"i18next-http-backend": "^2.1.1",
