--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@next/font": "^13.2.3",
+		"@react-hookz/web": "^22.0.0",
 		"i18next": "^22.4.11",
 		"i18next-browser-languagedetector": "^7.0.1",
 		"i18next-http-backend": "^2.1.1",
@@ -23,7 +24,8 @@
 		"next-i18next": "^13.2.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"react-i18next": "^12.2.0"
+		"react-i18next": "^12.2.0",
+		"react-icons": "^4.8.0"
 	},
 	"devDependencies": {
 		"@types/node": "18.14.6",
